--- a/views/index.erb
+++ b/views/index.erb
@@ -13,7 +13,11 @@
 <form action="/places" method="post">
   <div class="form-group">
     <label for="locale">Enter a place you've visited:</label>
-    <input id="locale" name="locale" type="text" class="form-control">
+    <input id="locale" name="locale" type="text" class="form-control" />
   </div>
   <button type="submit" class="btn btn-info">Add</button>
+</form>
+
+<form action="/clear" method="post">
+  <button type="submit" class="btn btn-danger">Clear</button>
 </form>
